made static page to publish temporarily on github pages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>The Beacon</title>
   </head>
   <body>
-    <div class="card">
-      <h1>NATURE</h1>
-    </div>
+    <section class="top">
+      <div class="center">
+        <video autoplay loop muted>
+          <source src="./assets/nuvens.mp4" />
+        </video>
+        <header>
+          <div class="logotype">
+            <div class="the">THE</div>
+            <div class="beacon">BEACON</div>
+          </div>
+        </header>
+        <div class="hero">
+          <img src="./assets/beacon.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="center">
+        <div class="section-title-container">
+          <div class="section-title">
+            <span>SOBRE NÓS</span>
+            <span>SOBRE NÓS</span>
+          </div>
+        </div>
+        <p>
+          Somos a The Beacon®, uma agência de desenvolvimento web de Amparo-SP,
+          especializada em criar soluções digitais que conectam negócios ao seu
+          público. Combinamos design criativo, tecnologia avançada e estratégias
+          eficazes para desenvolver websites personalizados, otimizados para
+          performance e resultados.Nosso compromisso é transformar a presença
+          digital da sua empresa, ajudando sua marca a crescer, se destacar no
+          mercado e construir conexões significativas com os clientes. Seja um
+          pequeno negócio ou uma grande empresa, estamos prontos para levar suas
+          ideias ao próximo nível.
+        </p>
+        <a href="/"><span>SAIBA MAIS</span></a>
+      </div>
+    </section>
   </body>
 </html>
