feat: atualizei o titulo para svg, tornando-o responsivo e bem encaixado

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <source src="./assets/nuvens.mp4" />
         </video>
         <header>
+          <div class="logotype-fundo">aaaa</div>
           <div class="logotype">
             <div class="the">THE</div>
             <div class="beacon">BEACON</div>
